[gd_scene load_steps=7 format=3 uid="uid://cevb6xo55ycq2"]

[ext_resource type="PackedScene" uid="uid://c6lqqodekqs5g" path="res://levels/proto/basic-level.tscn" id="1_pmn62"]
[ext_resource type="Script" uid="uid://bwdlvp14lmciv" path="res://objects/interactable.gd" id="2_iidqf"]
[ext_resource type="PackedScene" uid="uid://ddck1kyrs5me5" path="res://objects/interactable_zone/interactable_zone.tscn" id="3_1yhir"]
[ext_resource type="ArrayMesh" uid="uid://bfqybgk0kyt5m" path="res://levels/proto/models/Untitled_Mesh_023.res" id="4_i7vah"]

[sub_resource type="BoxShape3D" id="BoxShape3D_iidqf"]
size = Vector3(1.5, 3, 1.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_wlmjx"]
data = PackedVector3Array(-16.5648, -52.5563, -134.22, -18.9768, -64.0558, -153.215, -45.8917, -66.5333, -140.82, -16.5648, -52.5563, -134.22, -45.8917, -66.5333, -140.82, -49.2996, -35.7379, -131.427, -18.9768, -64.0558, -153.215, -51.0648, -71.8807, -174.338, -45.8917, -66.5333, -140.82, -18.9768, -64.0558, -153.215, -29.1161, -71.5394, -192.418, -51.0648, -71.8807, -174.338, -45.8917, -66.5333, -140.82, -51.0648, -71.8807, -174.338, -56.2944, -41.7453, -158.274, -29.1161, -71.5394, -192.418, -41.9798, -55.9509, -203.67, -51.0648, -71.8807, -174.338, 14.4564, -77.0752, -189.462, -29.1161, -71.5394, -192.418, -18.9768, -64.0558, -153.215, -11.6732, -60.1534, -211.922, -41.9798, -55.9509, -203.67, -29.1161, -71.5394, -192.418, 14.4564, -77.0752, -189.462, -11.6732, -60.1534, -211.922, -29.1161, -71.5394, -192.418, -49.2996, -35.7379, -131.427, -45.8917, -66.5333, -140.82, -56.2944, -41.7453, -158.274, -49.2996, -35.7379, -131.427, -56.2944, -41.7453, -158.274, -54.2557, -11.8447, -138.07, -56.2944, -41.7453, -158.274, -79.0701, -23.1305, -173.285, -54.2557, -11.8447, -138.07, -54.2557, -11.8447, -138.07, -79.0701, -23.1305, -173.285, -82.3818, 13.4938, -167.736, -79.0701, -23.1305, -173.285, -61.0222, -37.604, -180.439, -75.7088, -21.7713, -198.344, -79.0701, -23.1305, -173.285, -75.7088, -21.7713, -198.344, -82.3818, 13.4938, -167.736, -75.7088, -21.7713, -198.344, -76.58, 6.29124, -240.514, -86.6191, 18.7233, -235.122, -51.7918, -14.1456, -241.764, -76.58, 6.29124, -240.514, -75.7088, -21.7713, -198.344, -61.0222, -37.604, -180.439, -51.7918, -14.1456, -241.764, -75.7088, -21.7713, -198.344, -56.2944, -41.7453, -158.274, -51.0648, -71.8807, -174.338, -61.0222, -37.604, -180.439, -56.2944, -41.7453, -158.274, -61.0222, -37.604, -180.439, -79.0701, -23.1305, -173.285, -61.0222, -37.604, -180.439, -56.808, -39.1609, -216.717, -51.7918, -14.1456, -241.764, -51.0648, -71.8807, -174.338, -56.808, -39.1609, -216.717, -61.0222, -37.604, -180.439, -51.0648, -71.8807, -174.338, -41.9798, -55.9509, -203.67, -56.808, -39.1609, -216.717, -41.9798, -55.9509, -203.67, -40.0078, -43.7678, -270.328, -56.808, -39.1609, -216.717, -56.808, -39.1609, -216.717, -40.0078, -43.7678, -270.328, -51.7918, -14.1456, -241.764, -40.0078, -43.7678, -270.328, -36.9146, 1.73251, -263.149, -51.7918, -14.1456, -241.764, -40.0078, -43.7678, -270.328, -25.3212, -13.2813, -277.273, -36.9146, 1.73251, -263.149, -51.7918, -14.1456, -241.764, -44.1124, 10.2372, -237.191, -76.58, 6.29124, -240.514, -51.7918, -14.1456, -241.764, -36.9146, 1.73251, -263.149, -44.1124, 10.2372, -237.191, -36.9146, 1.73251, -263.149, -19.555, 3.20439, -305.96, -44.1124, 10.2372, -237.191, -28.1407, -3.58103, -295.919, -19.555, 3.20439, -305.96, -36.9146, 1.73251, -263.149, -25.3212, -13.2813, -277.273, -28.1407, -3.58103, -295.919, -36.9146, 1.73251, -263.149, -11.6732, -60.1534, -211.922, -13.9778, -53.0231, -231.884, -41.9798, -55.9509, -203.67, -41.9798, -55.9509, -203.67, -13.9778, -53.0231, -231.884, -40.0078, -43.7678, -270.328, -13.9778, -53.0231, -231.884, -30.6689, -51.2534, -270.245, -40.0078, -43.7678, -270.328, -13.9778, -53.0231, -231.884, -9.83252, -49.7458, -274.55, -30.6689, -51.2534, -270.245, -30.6689, -51.2534, -270.245, -25.3212, -13.2813, -277.273, -40.0078, -43.7678, -270.328, -9.83252, -49.7458, -274.55, -25.3212, -13.2813, -277.273, -30.6689, -51.2534, -270.245, -9.83252, -49.7458, -274.55, -9.63019, -32.5982, -277.106, -25.3212, -13.2813, -277.273, -9.63019, -32.5982, -277.106, 19.5353, 22.8384, -307.723, -7.44843, 6.94645, -326.24, 12.7547, -4.19709, -280.032, 19.5353, 22.8384, -307.723, -9.63019, -32.5982, -277.106, -25.3212, -13.2813, -277.273, -9.63019, -32.5982, -277.106, -19.555, 3.20439, -305.96, -9.63019, -32.5982, -277.106, -7.44843, 6.94645, -326.24, -19.555, 3.20439, -305.96, -7.44843, 6.94645, -326.24, 2.44604, 30.2853, -329.443, -12.9669, 30.7902, -333.463, -25.3212, -13.2813, -277.273, -19.555, 3.20439, -305.96, -28.1407, -3.58103, -295.919, -25.5705, 16.7612, -314.003, -12.9669, 30.7902, -333.463, -22.2331, 28.6145, -304.225, -19.555, 3.20439, -305.96, -7.44843, 6.94645, -326.24, -12.9669, 30.7902, -333.463, -19.555, 3.20439, -305.96, -12.9669, 30.7902, -333.463, -25.5705, 16.7612, -314.003, 2.44604, 30.2853, -329.443, -4.4101, 39.1646, -313.549, -12.9669, 30.7902, -333.463, -12.9669, 30.7902, -333.463, -4.4101, 39.1646, -313.549, -22.2331, 28.6145, -304.225, -4.4101, 39.1646, -313.549, -9.75037, 50.7465, -250.812, -22.2331, 28.6145, -304.225, -4.4101, 39.1646, -313.549, 8.25714, 40.9158, -281.016, -9.75037, 50.7465, -250.812, 2.44604, 30.2853, -329.443, 8.25714, 40.9158, -281.016, -4.4101, 39.1646, -313.549, 2.44604, 30.2853, -329.443, 19.5353, 22.8384, -307.723, 8.25714, 40.9158, -281.016, 19.5353, 22.8384, -307.723, 8.98822, 36.8166, -262.914, 8.25714, 40.9158, -281.016, 12.7547, -4.19709, -280.032, 24.6834, 9.27239, -269.872, 23.6735, 20.2347, -282.777, 12.7547, -4.19709, -280.032, 23.6735, 20.2347, -282.777, 19.5353, 22.8384, -307.723, -7.44843, 6.94645, -326.24, 19.5353, 22.8384, -307.723, 2.44604, 30.2853, -329.443, 19.5353, 22.8384, -307.723, 23.6735, 20.2347, -282.777, 8.98822, 36.8166, -262.914, 24.6834, 9.27239, -269.872, 36.6985, 17.7419, -269.022, 23.6735, 20.2347, -282.777, 36.6985, 17.7419, -269.022, 39.2753, 30.1216, -251.155, 23.6735, 20.2347, -282.777, 23.6735, 20.2347, -282.777, 39.2753, 30.1216, -251.155, 8.98822, 36.8166, -262.914, 36.6985, 17.7419, -269.022, 38.7867, 16.5963, -221.231, 39.2753, 30.1216, -251.155, 38.7867, 16.5963, -221.231, 26.5733, 45.5055, -210.697, 39.2753, 30.1216, -251.155, 38.7867, 16.5963, -221.231, 47.8666, 2.80522, -221.932, 26.5733, 45.5055, -210.697, 47.8666, 2.80522, -221.932, 44.0182, 46.4269, -203.752, 26.5733, 45.5055, -210.697, 47.8666, 2.80522, -221.932, 76.1669, 21.2648, -223.45, 44.0182, 46.4269, -203.752, 47.8666, 2.80522, -221.932, 75.0593, 2.57424, -220.777, 76.1669, 21.2648, -223.45, 39.2753, 30.1216, -251.155, 26.5733, 45.5055, -210.697, 8.98822, 36.8166, -262.914, 8.98822, 36.8166, -262.914, 9.47125, 52.8706, -204.271, -1.69769, 44.8893, -223.58, 26.5733, 45.5055, -210.697, 27.7435, 45.4348, -192.635, 9.47125, 52.8706, -204.271, 8.98822, 36.8166, -262.914, 26.5733, 45.5055, -210.697, 9.47125, 52.8706, -204.271, 26.5733, 45.5055, -210.697, 44.0182, 46.4269, -203.752, 27.7435, 45.4348, -192.635, 27.7435, 45.4348, -192.635, 42.2244, 47.5869, -149.688, 31.1336, 44.0251, -151.291, 27.7435, 45.4348, -192.635, 14.2581, 72.9305, -184.211, 9.47125, 52.8706, -204.271, 9.47125, 52.8706, -204.271, 14.2581, 72.9305, -184.211, 1.7442, 77.0752, -201.301, 14.2581, 72.9305, -184.211, -3.65668, 74.836, -171.498, 1.7442, 77.0752, -201.301, 27.7435, 45.4348, -192.635, 31.1336, 44.0251, -151.291, 14.2581, 72.9305, -184.211, 31.1336, 44.0251, -151.291, 16.3959, 51.2307, -145.772, 14.2581, 72.9305, -184.211, 14.2581, 72.9305, -184.211, 16.3959, 51.2307, -145.772, -3.65668, 74.836, -171.498, 31.1336, 44.0251, -151.291, 21.4351, 32.8019, -141.633, 16.3959, 51.2307, -145.772, 31.1336, 44.0251, -151.291, 42.2244, 47.5869, -149.688, 21.4351, 32.8019, -141.633, 42.2244, 47.5869, -149.688, 39.642, 27.4951, -127.501, 21.4351, 32.8019, -141.633, 75.0593, 2.57424, -220.777, 82.8303, 13.9926, -214.439, 76.1669, 21.2648, -223.45, 76.1669, 21.2648, -223.45, 82.8303, 13.9926, -214.439, 74.6855, 31.2647, -207.777, 82.8303, 13.9926, -214.439, 86.6188, 18.5226, -167.071, 74.6855, 31.2647, -207.777, 82.8303, 13.9926, -214.439, 75.0593, 2.57424, -220.777, 86.6188, 18.5226, -167.071, 75.0593, 2.57424, -220.777, 74.9865, -21.7388, -160.802, 86.6188, 18.5226, -167.071, 76.1669, 21.2648, -223.45, 74.6855, 31.2647, -207.777, 44.0182, 46.4269, -203.752, 44.0182, 46.4269, -203.752, 42.2244, 47.5869, -149.688, 27.7435, 45.4348, -192.635, 74.6855, 31.2647, -207.777, 42.2244, 47.5869, -149.688, 44.0182, 46.4269, -203.752, 74.6855, 31.2647, -207.777, 86.6188, 18.5226, -167.071, 42.2244, 47.5869, -149.688, 86.6188, 18.5226, -167.071, 77.6359, 13.9555, -136.578, 42.2244, 47.5869, -149.688, 74.9865, -21.7388, -160.802, 77.6359, 13.9555, -136.578, 86.6188, 18.5226, -167.071, 74.9865, -21.7388, -160.802, 79.7228, 1.11774, -131.412, 77.6359, 13.9555, -136.578, 77.6359, 13.9555, -136.578, 79.7228, 1.11774, -131.412, 42.2244, 47.5869, -149.688, 79.7228, 1.11774, -131.412, 70.5729, -16.8745, -135.933, 34.5534, -0.866886, -117.992, 42.2244, 47.5869, -149.688, 79.7228, 1.11774, -131.412, 39.642, 27.4951, -127.501, 79.7228, 1.11774, -131.412, 34.5534, -0.866886, -117.992, 39.642, 27.4951, -127.501, 34.5534, -0.866886, -117.992, 17.2772, -12.6318, -108.524, 39.642, 27.4951, -127.501, 17.2772, -12.6318, -108.524, -5.57452, 19.6309, -111.641, 39.642, 27.4951, -127.501, 34.5534, -0.866886, -117.992, 42.6741, -29.7795, -139.261, 17.2772, -12.6318, -108.524, 70.5729, -16.8745, -135.933, 42.6741, -29.7795, -139.261, 34.5534, -0.866886, -117.992, 39.642, 27.4951, -127.501, -5.57452, 19.6309, -111.641, 21.4351, 32.8019, -141.633, 16.3959, 51.2307, -145.772, 21.4351, 32.8019, -141.633, -7.85144, 59.3057, -139.348, 21.4351, 32.8019, -141.633, -5.57452, 19.6309, -111.641, -7.85144, 59.3057, -139.348, -7.85144, 59.3057, -139.348, -5.57452, 19.6309, -111.641, -38.5342, 47.926, -137.462, -5.57452, 19.6309, -111.641, -27.2142, 28.1475, -120.248, -38.5342, 47.926, -137.462, -5.57452, 19.6309, -111.641, -19.8423, -27.4232, -115.318, -27.2142, 28.1475, -120.248, -27.2142, 28.1475, -120.248, -19.8423, -27.4232, -115.318, -34.7781, -2.4788, -118.952, -27.2142, 28.1475, -120.248, -34.7781, -2.4788, -118.952, -55.5732, 10.6435, -136.507, -27.2142, 28.1475, -120.248, -55.5732, 10.6435, -136.507, -56.0501, 31.787, -156.496, -34.7781, -2.4788, -118.952, -54.2557, -11.8447, -138.07, -55.5732, 10.6435, -136.507, -34.7781, -2.4788, -118.952, -49.2996, -35.7379, -131.427, -54.2557, -11.8447, -138.07, -16.5648, -52.5563, -134.22, -49.2996, -35.7379, -131.427, -19.8423, -27.4232, -115.318, -19.8423, -27.4232, -115.318, -49.2996, -35.7379, -131.427, -34.7781, -2.4788, -118.952, 42.6741, -29.7795, -139.261, 36.006, -47.6964, -132.375, 17.2772, -12.6318, -108.524, 36.006, -47.6964, -132.375, 20.2539, -64.14, -135.801, 17.2772, -12.6318, -108.524, 17.2772, -12.6318, -108.524, -19.8423, -27.4232, -115.318, -5.57452, 19.6309, -111.641, 17.2772, -12.6318, -108.524, -16.5648, -52.5563, -134.22, -19.8423, -27.4232, -115.318, 20.2539, -64.14, -135.801, -16.5648, -52.5563, -134.22, 17.2772, -12.6318, -108.524, 20.2539, -64.14, -135.801, -18.9768, -64.0558, -153.215, -16.5648, -52.5563, -134.22, -54.2557, -11.8447, -138.07, -82.3818, 13.4938, -167.736, -55.5732, 10.6435, -136.507, -55.5732, 10.6435, -136.507, -82.3818, 13.4938, -167.736, -56.0501, 31.787, -156.496, -56.0501, 31.787, -156.496, -86.6191, 18.7233, -235.122, -47.286, 37.6888, -190.276, -56.0501, 31.787, -156.496, -47.286, 37.6888, -190.276, -42.3339, 53.3649, -156.995, -47.286, 37.6888, -190.276, -44.4388, 21.5246, -239.442, -30.3552, 32.78, -249.182, -82.3818, 13.4938, -167.736, -75.7088, -21.7713, -198.344, -86.6191, 18.7233, -235.122, -82.3818, 13.4938, -167.736, -86.6191, 18.7233, -235.122, -56.0501, 31.787, -156.496, -86.6191, 18.7233, -235.122, -72.5881, 21.7486, -239.747, -47.286, 37.6888, -190.276, -47.286, 37.6888, -190.276, -72.5881, 21.7486, -239.747, -44.4388, 21.5246, -239.442, -86.6191, 18.7233, -235.122, -76.58, 6.29124, -240.514, -72.5881, 21.7486, -239.747, -56.0501, 31.787, -156.496, -38.5342, 47.926, -137.462, -27.2142, 28.1475, -120.248, -7.85144, 59.3057, -139.348, -38.5342, 47.926, -137.462, -24.4274, 64.5694, -168.011, -38.5342, 47.926, -137.462, -42.3339, 53.3649, -156.995, -24.4274, 64.5694, -168.011, -56.0501, 31.787, -156.496, -42.3339, 53.3649, -156.995, -38.5342, 47.926, -137.462, -7.85144, 59.3057, -139.348, -3.65668, 74.836, -171.498, 16.3959, 51.2307, -145.772, -7.85144, 59.3057, -139.348, -24.4274, 64.5694, -168.011, -3.65668, 74.836, -171.498, -3.65668, 74.836, -171.498, -24.4274, 64.5694, -168.011, 1.7442, 77.0752, -201.301, -24.4274, 64.5694, -168.011, -12.0856, 69.2958, -196.19, 1.7442, 77.0752, -201.301, -24.4274, 64.5694, -168.011, -21.066, 47.8664, -183.746, -12.0856, 69.2958, -196.19, -12.0856, 69.2958, -196.19, 9.47125, 52.8706, -204.271, 1.7442, 77.0752, -201.301, -12.0856, 69.2958, -196.19, -13.8425, 46.0742, -205.12, 9.47125, 52.8706, -204.271, -21.066, 47.8664, -183.746, -13.8425, 46.0742, -205.12, -12.0856, 69.2958, -196.19, -42.3339, 53.3649, -156.995, -47.286, 37.6888, -190.276, -24.4274, 64.5694, -168.011, -47.286, 37.6888, -190.276, -21.066, 47.8664, -183.746, -24.4274, 64.5694, -168.011, -47.286, 37.6888, -190.276, -30.3552, 32.78, -249.182, -21.066, 47.8664, -183.746, -21.066, 47.8664, -183.746, -30.3552, 32.78, -249.182, -13.8425, 46.0742, -205.12, -30.3552, 32.78, -249.182, -25.3151, 40.4424, -259.809, -13.8425, 46.0742, -205.12, -13.8425, 46.0742, -205.12, -25.3151, 40.4424, -259.809, -9.75037, 50.7465, -250.812, -13.8425, 46.0742, -205.12, -1.69769, 44.8893, -223.58, 9.47125, 52.8706, -204.271, -13.8425, 46.0742, -205.12, -9.75037, 50.7465, -250.812, -1.69769, 44.8893, -223.58, -9.75037, 50.7465, -250.812, 8.98822, 36.8166, -262.914, -1.69769, 44.8893, -223.58, -9.75037, 50.7465, -250.812, 8.25714, 40.9158, -281.016, 8.98822, 36.8166, -262.914, -25.3151, 40.4424, -259.809, -22.2331, 28.6145, -304.225, -9.75037, 50.7465, -250.812, -76.58, 6.29124, -240.514, -44.1124, 10.2372, -237.191, -72.5881, 21.7486, -239.747, -72.5881, 21.7486, -239.747, -44.1124, 10.2372, -237.191, -44.4388, 21.5246, -239.442, -44.4388, 21.5246, -239.442, -22.2331, 28.6145, -304.225, -30.3552, 32.78, -249.182, -30.3552, 32.78, -249.182, -22.2331, 28.6145, -304.225, -25.3151, 40.4424, -259.809, -44.1124, 10.2372, -237.191, -25.5705, 16.7612, -314.003, -44.4388, 21.5246, -239.442, -44.4388, 21.5246, -239.442, -25.5705, 16.7612, -314.003, -22.2331, 28.6145, -304.225, -19.555, 3.20439, -305.96, -25.5705, 16.7612, -314.003, -44.1124, 10.2372, -237.191, 79.7228, 1.11774, -131.412, 74.9865, -21.7388, -160.802, 70.5729, -16.8745, -135.933, 70.5729, -16.8745, -135.933, 74.9865, -21.7388, -160.802, 48.1412, -36.7885, -158.948, 70.5729, -16.8745, -135.933, 48.1412, -36.7885, -158.948, 42.6741, -29.7795, -139.261, 42.6741, -29.7795, -139.261, 48.6028, -50.5116, -146.26, 36.006, -47.6964, -132.375, 42.6741, -29.7795, -139.261, 48.1412, -36.7885, -158.948, 48.6028, -50.5116, -146.26, 48.1412, -36.7885, -158.948, 48.9343, -52.86, -184.031, 48.6028, -50.5116, -146.26, 48.1412, -36.7885, -158.948, 54.018, -29.9581, -202.397, 48.9343, -52.86, -184.031, 54.018, -29.9581, -202.397, 43.9839, -43.1716, -224.12, 48.9343, -52.86, -184.031, 74.9865, -21.7388, -160.802, 75.0593, 2.57424, -220.777, 54.018, -29.9581, -202.397, 74.9865, -21.7388, -160.802, 54.018, -29.9581, -202.397, 48.1412, -36.7885, -158.948, 75.0593, 2.57424, -220.777, 47.8302, -18.1558, -211.789, 54.018, -29.9581, -202.397, 20.2539, -64.14, -135.801, 36.006, -47.6964, -132.375, 23.9133, -72.4664, -149.964, 36.006, -47.6964, -132.375, 48.6028, -50.5116, -146.26, 23.9133, -72.4664, -149.964, 23.9133, -72.4664, -149.964, 48.9343, -52.86, -184.031, 12.5894, -71.1837, -161.518, 48.6028, -50.5116, -146.26, 48.9343, -52.86, -184.031, 23.9133, -72.4664, -149.964, 20.2539, -64.14, -135.801, 23.9133, -72.4664, -149.964, -18.9768, -64.0558, -153.215, 23.9133, -72.4664, -149.964, 12.5894, -71.1837, -161.518, -18.9768, -64.0558, -153.215, 12.5894, -71.1837, -161.518, 14.4564, -77.0752, -189.462, -18.9768, -64.0558, -153.215, 12.5894, -71.1837, -161.518, 28.2306, -58.2617, -203.095, 14.4564, -77.0752, -189.462, 48.9343, -52.86, -184.031, 28.2306, -58.2617, -203.095, 12.5894, -71.1837, -161.518, 48.9343, -52.86, -184.031, 43.9839, -43.1716, -224.12, 28.2306, -58.2617, -203.095, 28.2306, -58.2617, -203.095, 43.9839, -43.1716, -224.12, 25.4445, -36.6043, -239.64, 28.2306, -58.2617, -203.095, 25.4445, -36.6043, -239.64, 14.4564, -77.0752, -189.462, 14.4564, -77.0752, -189.462, 25.4445, -36.6043, -239.64, -11.6732, -60.1534, -211.922, 25.4445, -36.6043, -239.64, -13.9778, -53.0231, -231.884, -11.6732, -60.1534, -211.922, 25.4445, -36.6043, -239.64, -9.83252, -49.7458, -274.55, -13.9778, -53.0231, -231.884, -9.83252, -49.7458, -274.55, 12.7547, -4.19709, -280.032, -9.63019, -32.5982, -277.106, 43.9839, -43.1716, -224.12, 33.0846, -23.2476, -259.664, 25.4445, -36.6043, -239.64, 25.4445, -36.6043, -239.64, 12.7547, -4.19709, -280.032, -9.83252, -49.7458, -274.55, 25.4445, -36.6043, -239.64, 33.0846, -23.2476, -259.664, 12.7547, -4.19709, -280.032, 75.0593, 2.57424, -220.777, 47.8666, 2.80522, -221.932, 47.8302, -18.1558, -211.789, 47.8302, -18.1558, -211.789, 47.8666, 2.80522, -221.932, 33.0846, -23.2476, -259.664, 54.018, -29.9581, -202.397, 33.0846, -23.2476, -259.664, 43.9839, -43.1716, -224.12, 47.8302, -18.1558, -211.789, 33.0846, -23.2476, -259.664, 54.018, -29.9581, -202.397, 24.6834, 9.27239, -269.872, 12.7547, -4.19709, -280.032, 33.0846, -23.2476, -259.664, 47.8666, 2.80522, -221.932, 38.7867, 16.5963, -221.231, 33.0846, -23.2476, -259.664, 33.0846, -23.2476, -259.664, 36.6985, 17.7419, -269.022, 24.6834, 9.27239, -269.872, 38.7867, 16.5963, -221.231, 36.6985, 17.7419, -269.022, 33.0846, -23.2476, -259.664, -15.9368, -9.18832, 4.86867, 9.35297, -17.4051, 4.86867, -8.04578, -6.52256, -39.1107, 9.35297, -17.4051, 4.86867, 5.11615, -10.7992, -39.1107, -8.04578, -6.52256, -39.1107, -15.9368, 17.4022, 4.86867, -15.9368, -9.18832, 4.86867, -8.04578, 7.31687, -39.1107, -15.9368, -9.18832, 4.86867, -8.04578, -6.52256, -39.1107, -8.04578, 7.31687, -39.1107, 9.35297, 25.619, 4.86867, -15.9368, 17.4022, 4.86867, 5.11615, 11.5934, -39.1107, -15.9368, 17.4022, 4.86867, -8.04578, 7.31687, -39.1107, 5.11615, 11.5934, -39.1107, 9.35297, 25.619, 4.86867, 5.11615, 11.5934, -39.1107, 24.9819, 4.10693, 4.86867, 5.11615, 11.5934, -39.1107, 13.251, 0.397139, -39.1107, 24.9819, 4.10693, 4.86867, 24.9819, 4.10693, 4.86867, 13.251, 0.397139, -39.1107, 9.35297, -17.4051, 4.86867, 13.251, 0.397139, -39.1107, 5.11615, -10.7992, -39.1107, 9.35297, -17.4051, 4.86867, -15.9368, -9.18832, 4.86867, 2.3631, 4.10693, 15.8642, 9.35297, -17.4051, 4.86867, -15.9368, 17.4022, 4.86867, 2.3631, 4.10693, 15.8642, -15.9368, -9.18832, 4.86867, 9.35297, 25.619, 4.86867, 2.3631, 4.10693, 15.8642, -15.9368, 17.4022, 4.86867, 24.9819, 4.10693, 4.86867, 2.3631, 4.10693, 15.8642, 9.35297, 25.619, 4.86867, 9.35297, -17.4051, 4.86867, 2.3631, 4.10693, 15.8642, 24.9819, 4.10693, 4.86867, -1.98108, -17.2405, -158.583, -4.88885, -8.29146, -158.583, -12.5019, -13.8222, -158.583, -12.5019, -13.8222, -158.583, -4.88885, -8.29146, -158.583, -12.5019, -2.76073, -158.583, -12.5019, -2.76073, -158.583, -4.88885, -8.29146, -158.583, -1.98108, 0.657434, -158.583, -1.98108, 0.657434, -158.583, -4.88885, -8.29146, -158.583, 4.52069, -8.29146, -158.583, 4.52069, -8.29146, -158.583, -4.88885, -8.29146, -158.583, -1.98108, -17.2405, -158.583, 5.11615, -10.7992, -39.1107, 1.89868, 0.579275, -82.2893, -8.04578, -6.52256, -39.1107, 1.89868, 0.579275, -82.2893, -8.62134, 3.9975, -82.2893, -8.04578, -6.52256, -39.1107, -8.04578, -6.52256, -39.1107, -8.62134, 3.9975, -82.2893, -8.04578, 7.31687, -39.1107, -8.62134, 3.9975, -82.2893, -8.62134, 15.0589, -82.2893, -8.04578, 7.31687, -39.1107, -8.04578, 7.31687, -39.1107, -8.62134, 15.0589, -82.2893, 5.11615, 11.5934, -39.1107, -8.62134, 15.0589, -82.2893, 1.89868, 18.4771, -82.2893, 5.11615, 11.5934, -39.1107, 13.251, 0.397139, -39.1107, 5.11615, 11.5934, -39.1107, 8.40045, 9.52817, -82.2893, 5.11615, 11.5934, -39.1107, 1.89868, 18.4771, -82.2893, 8.40045, 9.52817, -82.2893, 5.11615, -10.7992, -39.1107, 13.251, 0.397139, -39.1107, 1.89868, 0.579275, -82.2893, 13.251, 0.397139, -39.1107, 8.40045, 9.52817, -82.2893, 1.89868, 0.579275, -82.2893, -8.62134, 3.9975, -82.2893, 1.89868, 0.579275, -82.2893, -8.41266, 1.49724, -94.8775, 1.89868, 0.579275, -82.2893, 2.10736, -1.92093, -94.8775, -8.41266, 1.49724, -94.8775, -8.62134, 15.0589, -82.2893, -8.62134, 3.9975, -82.2893, -8.41266, 12.5586, -94.8775, -8.62134, 3.9975, -82.2893, -8.41266, 1.49724, -94.8775, -8.41266, 12.5586, -94.8775, 1.89868, 18.4771, -82.2893, -8.62134, 15.0589, -82.2893, 2.10736, 15.9769, -94.8775, -8.62134, 15.0589, -82.2893, -8.41266, 12.5586, -94.8775, 2.10736, 15.9769, -94.8775, 26.4545, 31.8176, -106.622, 24.6374, 29.1432, -110.776, 29.3923, 28.3605, -106.642, 24.6374, 29.1432, -110.776, 27.5753, 25.6861, -110.796, 29.3923, 28.3605, -106.642, 8.40045, 9.52817, -82.2893, 8.60913, 7.02797, -94.8775, 1.89868, 0.579275, -82.2893, 8.60913, 7.02797, -94.8775, 2.10736, -1.92093, -94.8775, 1.89868, 0.579275, -82.2893, 2.10736, 15.9769, -94.8775, -8.41266, 12.5586, -94.8775, -1.98108, 0.657434, -158.583, -8.41266, 12.5586, -94.8775, -12.5019, -2.76073, -158.583, -1.98108, 0.657434, -158.583, -8.41266, 12.5586, -94.8775, -8.41266, 1.49724, -94.8775, -12.5019, -2.76073, -158.583, -8.41266, 1.49724, -94.8775, -12.5019, -13.8222, -158.583, -12.5019, -2.76073, -158.583, -8.41266, 1.49724, -94.8775, 2.10736, -1.92093, -94.8775, -12.5019, -13.8222, -158.583, 2.10736, -1.92093, -94.8775, -1.98108, -17.2405, -158.583, -12.5019, -13.8222, -158.583, 8.60913, 7.02797, -94.8775, 4.52069, -8.29146, -158.583, 2.10736, -1.92093, -94.8775, 4.52069, -8.29146, -158.583, -1.98108, -17.2405, -158.583, 2.10736, -1.92093, -94.8775, 2.10736, 15.9769, -94.8775, -1.98108, 0.657434, -158.583, 8.60913, 7.02797, -94.8775, -1.98108, 0.657434, -158.583, 4.52069, -8.29146, -158.583, 8.60913, 7.02797, -94.8775, 1.89868, 18.4771, -82.2893, 16.5842, 22.6197, -88.319, 8.40045, 9.52817, -82.2893, 16.5842, 22.6197, -88.319, 21.1266, 16.2372, -89.6532, 8.40045, 9.52817, -82.2893, 8.40045, 9.52817, -82.2893, 21.1266, 16.2372, -89.6532, 8.60913, 7.02797, -94.8775, 21.1266, 16.2372, -89.6532, 17.0297, 12.9904, -97.2497, 8.60913, 7.02797, -94.8775, 2.10736, 15.9769, -94.8775, 8.60913, 7.02797, -94.8775, 12.4872, 19.3728, -95.9156, 8.60913, 7.02797, -94.8775, 17.0297, 12.9904, -97.2497, 12.4872, 19.3728, -95.9156, 1.89868, 18.4771, -82.2893, 2.10736, 15.9769, -94.8775, 16.5842, 22.6197, -88.319, 2.10736, 15.9769, -94.8775, 12.4872, 19.3728, -95.9156, 16.5842, 22.6197, -88.319, 21.1266, 16.2372, -89.6532, 16.5842, 22.6197, -88.319, 29.3923, 28.3605, -106.642, 16.5842, 22.6197, -88.319, 26.4545, 31.8176, -106.622, 29.3923, 28.3605, -106.642, 21.1266, 16.2372, -89.6532, 29.3923, 28.3605, -106.642, 17.0297, 12.9904, -97.2497, 29.3923, 28.3605, -106.642, 27.5753, 25.6861, -110.796, 17.0297, 12.9904, -97.2497, 17.0297, 12.9904, -97.2497, 27.5753, 25.6861, -110.796, 12.4872, 19.3728, -95.9156, 27.5753, 25.6861, -110.796, 24.6374, 29.1432, -110.776, 12.4872, 19.3728, -95.9156, 16.5842, 22.6197, -88.319, 12.4872, 19.3728, -95.9156, 26.4545, 31.8176, -106.622, 12.4872, 19.3728, -95.9156, 24.6374, 29.1432, -110.776, 26.4545, 31.8176, -106.622)

[node name="Node3D" instance=ExtResource("1_pmn62")]

[node name="Tree" type="Node3D" parent="Level" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.13927)
script = ExtResource("2_iidqf")

[node name="InteractableZone" parent="Level/Tree" index="0" instance=ExtResource("3_1yhir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
interaction_distance = 1.0

[node name="CollisionShape3D" parent="Level/Tree/InteractableZone" index="0"]
shape = SubResource("BoxShape3D_iidqf")

[node name="SM_Prop_Target_03" type="MeshInstance3D" parent="Level/Tree" index="1"]
transform = Transform3D(0.01, 0, 0, 0, 0, -0.01, 0, 0.01, 0, 0, 0, 0)
mesh = ExtResource("4_i7vah")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Level/Tree/SM_Prop_Target_03" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Tree/SM_Prop_Target_03/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_wlmjx")

[connection signal="noticed" from="Level/Tree/InteractableZone" to="Level/Tree" method="_on_interactable_zone_noticed"]
[connection signal="unnoticed" from="Level/Tree/InteractableZone" to="Level/Tree" method="_on_interactable_zone_unnoticed"]

[editable path="Level/Tree/InteractableZone"]
